kubernetes/argocd/argocd/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd
  namespace: argocd
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.69.3
  externalTrafficPolicy: Local
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: argocd-server
---
