kubernetes/argocd/argocd/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
spec:
  hostnames:
    - argocd.wagner.gg
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: network
      sectionName: https
  rules:
  - backendRefs:
    - kind: Service
      name: argocd-server
      port: 80
