kubernetes/argocd/argocd/base/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress-traefik
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.${SECRET_DOMAIN_0}`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy-auth
          namespace: network
      services:
        - name: argocd-server
          port: 80
  tls:
    certResolver: letsencrypt
